# ai-stack-public

./: .env.example  .gitignore  .pre-commit-config.yaml  AI.code-workspace  CHANGELOG.md  Justfile  README.md  models.json  pyproject.toml
.agents/skills/ai-stack/: SKILL.md
.agents/skills/ai-stack-litellm/: SKILL.md
.agents/skills/ai-stack-llama-swap/: SKILL.md
.agents/skills/ai-stack-models/: SKILL.md
.agents/skills/ai-stack-quadlets/: SKILL.md
.claude/: settings.json
.config/chezmoi/: chezmoi.example.toml
.github/workflows/: pre-commit.yml  public-mirror.yml  public-release.yml  release.yml  validate.yml
docs/: architecture.md  routing.md
litellm/: .env.example  Justfile  README.md
litellm/launchd/: com.anykey.ai-stack.litellm.plist.tmpl
litellm/systemd/: litellm.service.tmpl
llama-swap/: Justfile  README.md
llama-swap/launchd/: com.anykey.ai-stack.llama-swap.plist.tmpl
llama-swap/systemd/: llama-swap.service.tmpl
managed/litellm/: config.yaml.tmpl  private_dot_env.tmpl
managed/llama-swap/: config.yaml.tmpl
managed/podman/: private_dot_env.tmpl
managed/podman/config/searxng/: limiter.toml.tmpl  settings.yml.tmpl
managed/podman/quadlets/: ai-stack.network.tmpl  n8n-runners.container.tmpl  n8n.container.tmpl  qdrant.container.tmpl  searxng.container.tmpl
podman/: .env.example  Justfile  README.md
scripts/: README.md  check_synced_with_master.sh  install_packages.sh  publish_public_mirror.sh  sync_with_master.sh  update_models.sh
